[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/bullet.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 3 )

[node name="bullet" type="Area2D" groups=["bullet"]]
collision_layer = 2
collision_mask = 20
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.76837e-07, 0 )
scale = Vector2( 0.8, 0.3 )

[connection signal="area_entered" from="." to="." method="_on_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="queue_free"]
